--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,8 @@ jobs:
 
     - name: SSH to server and pull latest changes
       run: |
-        ssh -o StrictHostKeyChecking=no -p 8022 automation@103.187.94.57 << 'EOF'
+        # SSH with verbose output and a longer timeout for debugging
+        ssh -o StrictHostKeyChecking=no -o ConnectTimeout=60 -v automation@192.168.44.128 << 'EOF'
           cd /var/www/html/test
           git pull origin main
         EOF
