--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,8 @@ jobs:
 
     - name: SSH to server and pull latest changes
       run: |
+        # Automatically accept the server's fingerprint
+        ssh-keyscan -H 192.168.44.128 >> ~/.ssh/known_hosts
         # SSH with verbose output and a longer timeout for debugging
-        ssh -o StrictHostKeyChecking=no -o ConnectTimeout=60 -v automation@192.168.44.128 "cd /var/www/html/test && git pull origin main"     
+        ssh -o StrictHostKeyChecking=no -o ConnectTimeout=60 -v automation@192.168.44.128 "cd /var/www/html/test && git pull origin main"
         
