--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,15 @@ jobs:
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-    - name: SSH to server and pull latest changes
-      run: |
+   - name: SSH to server and pull latest changes
+     run: |
         # Automatically accept the server's fingerprint
         ssh-keyscan -H 192.168.44.128 >> ~/.ssh/known_hosts
         # SSH with verbose output and a longer timeout for debugging
-        ssh -o StrictHostKeyChecking=no -o ConnectTimeout=60 -v automation@192.168.44.128 "cd /var/www/html/test && git pull origin main"
+        ssh -o StrictHostKeyChecking=no -o ConnectTimeout=60 -v automation@192.168.44.128 "
+          echo 'Checking current directory:'
+          pwd
+          echo 'Listing contents of /var/www/html/test:'
+          ls -la /var/www/html/test
+          cd /var/www/html/test && git pull origin main"
         
