--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,14 +20,6 @@ jobs:
 
     - name: SSH to server and pull latest changes
       run: |
-        # Automatically accept the server's fingerprint
         ssh-keyscan -H 192.168.44.128 >> ~/.ssh/known_hosts
-        # SSH with verbose output and a longer timeout for debugging
-        ssh -o StrictHostKeyChecking=no -o ConnectTimeout=60 -v automation@192.168.44.128 "
-          echo 'Checking current directory:'
-          pwd
-          echo 'Listing contents of /var/www/html/test:'
-          ls -la /var/www/html/test
-          echo 'Attempting to git pull with sudo...'
-          sudo -u root cd /var/www/html/test && sudo -u root git pull origin main"
-        
+        ssh -o StrictHostKeyChecking=no -o ConnectTimeout=60 automation@192.168.44.128 \
+          "sudo bash -c 'cd /var/www/html/test && git pull origin main'"
