--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,13 @@ jobs:
 
     - name: SSH to server and pull latest changes
       run: |
+        # Automatically accept the server's fingerprint
+        echo "Adding the server's fingerprint to known_hosts"
         ssh-keyscan -H 192.168.44.128 >> ~/.ssh/known_hosts
-        ssh -o StrictHostKeyChecking=no -o ConnectTimeout=60 automation@192.168.44.128 \
-          "sudo bash -c 'cd /var/www/html/test && git pull origin main'"
+    
+        # Run SSH command with additional debug output
+        echo "Connecting to the server and attempting to pull latest changes"
+        ssh -o StrictHostKeyChecking=no -o ConnectTimeout=60 -v automation@192.168.44.128 \
+          "echo 'Checking current directory:' && pwd && \
+           echo 'Listing contents of /var/www/html/test:' && ls -la /var/www/html/test && \
+           echo 'Attempting to git pull with sudo...' && sudo bash -c 'cd /var/www/html/test && git pull origin main'"
