--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,8 @@ jobs:
 
     - name: SSH to server and pull latest changes
       run: |
-        echo "Adding the server's fingerprint to known_hosts"
-        ssh-keyscan -H 192.168.44.128 >> ~/.ssh/known_hosts
-
-        echo "Connecting to the server and attempting to pull latest changes"
-        ssh -o ConnectTimeout=60 -v automation@192.168.44.128 \
-          "echo 'Checking current directory:' && pwd && \
-           echo 'Listing contents of /var/www/html/test:' && ls -la /var/www/html/test && \
-           echo 'Attempting to git pull with sudo...' && sudo bash -c 'cd /var/www/html/test && git pull origin main'"
+        # SSH with verbose output and a longer timeout for debugging
+        ssh -o StrictHostKeyChecking=no -o ConnectTimeout=60 -v automation@192.168.44.128 
+          cd /var/www/html/test
+          git pull origin main
+        
