--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,15 @@ jobs:
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+    - name: Check SSH agent
+      run: |
+        ssh-add -l
+
     - name: SSH to server and pull latest changes
       run: |
+        # Add the server to known_hosts
+        ssh-keyscan -H 192.168.44.128 >> ~/.ssh/known_hosts
+
         # SSH with verbose output and a longer timeout for debugging
         ssh -o StrictHostKeyChecking=no -o ConnectTimeout=60 -v automation@192.168.44.128 "
           cd /var/www/html/test && 
